--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <!-- Home Section Start-->
             <section class="home section autoshow" id="home">
               <div class="home-img" id="home-img"><img src="img/pp.webp" alt=""></div>
-              <div class="home-p"><li class="intro-line">Hi I'm <span class="intro-line-span">Yashraj Boralkar</span></li><p>A passionate web developer eager to contribute my skills in crafting engaging online experiences. With a solid foundation in HTML, CSS, and JavaScript, I'm enthusiastic about learning new technologies and frameworks to create user-friendly websites.</p></div>
+              <div class="home-p"><li class="intro-line">Hi I'm <span class="intro-line-span">Yashr####ka#r</span></li><p>A passionate web developer eager to contribute my skills in crafting engaging online experiences. With a solid foundation in HTML, CSS, and JavaScript, I'm enthusiastic about learning new technologies and frameworks to create user-friendly websites.</p></div>
             
             </section>
              <!-- Home Section End -->
@@ -103,9 +103,9 @@
               <div class="about-left-container">
                 <div class="about-left">
                   <ul>
-                    <li><b>Birthday: </b> 15 August 2000</li>
-                    <li><b>Degree: </b> M.sc CS</li>
-                    <li><b>City: </b> Washim 444505</li>
+                    <li><b>Birthday: </b> 1###00#0</li>
+                    <li><b>Degree: </b> #.##S</li>
+                    <li><b>City: </b> W###4505</li>
                   </ul><br>
                   <ul>
                     <li><b>Age: </b> 24</li>
@@ -145,15 +145,15 @@
                </thead>
                  <tr>
                   <td>2018 - 2021</td>
-                   <td>B.Sc</td>
-                   <td>Computer Science</td>
-                    <td>Sant. Gadge Baba Amravti University</td>
+                   <td>###</td>
+                   <td>Co####er Sc####ce</td>
+                    <td>Sa## #### ###ba A##ti Un####ity</td>
                  </tr>
                   <tr>
                    <td>2021 - 2023</td>
                    <td>M.Sc</td>
                    <td>Computer Science</td>
-                   <td>Sant. Gadge Baba Amravti University</td>
+                   <td>Sa###t. ## ## Aav##ti ###</td>
                   </tr>
                </tbody>
               </table>
@@ -170,9 +170,9 @@
               <h1 class="decoration-line header-page">Projects</h1>
               <div class="pro-container">
                 <div class="proj pro1">
-                  <div class="ank"></div><a href="https://calculator-yashraj.pages.dev/" target="_top"><div class="text">Calculator with Reg & log</div><img src="img/pro1.webp" alt=""></a></div>
-                <div class="proj"><a href="https://netflix-yashraj.pages.dev/" target="_top"><div class="text">Netflix Startpage Clone</div><img src="img/pro2.webp" alt=""></a></div>
-                <div class="proj"><a href="https://miniprojects-yashraj.pages.dev/" target="_top"><div class="text" style=" color: #000;">Mini Projects</div><img src="img/pro3.webp" alt=""></a></div>
+                  <div class="ank"></div><a href="https://calcula######es.dev/" target="_top"><div class="text">Calculator with Reg & log</div><img src="img/pro1.webp" alt=""></a></div>
+                <div class="proj"><a href="https://net####j.pag##.dev/" target="_top"><div class="text">Netflix Startpage Clone</div><img src="img/pro2.webp" alt=""></a></div>
+                <div class="proj"><a href="https://minipr#####hraj.pages.dev/" target="_top"><div class="text" style=" color: #000;">Mini Projects</div><img src="img/pro3.webp" alt=""></a></div>
 
                 <div class="proj"><a href="#" target="_top"><div class="text" style=" color: #000">Designer Site</div><img src="img/pro4.png" alt="img"></a></div>
 
@@ -191,10 +191,10 @@
                 </div>
                 <div class="per-links">
                   <h3><li>Get in Touch :</li></h3><br>
-                  <a href="https://www.linkedin.com/in/yashraj-boralkar-371629301/" target="_top" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.co##m/in/yas#####629301/" target="_top" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                   <a href="https://github.com/Ysb321" target="_top" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-                  <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=yboralkar@gmail.com" target="_top" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i></a>
-                  <a href="https://www.instagram.com/osm_yashraj/" target="_top" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&t###b####ar@gmail.com" target="_top" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i></a>
+                  <a href="https://www.instagram.com/os####/" target="_top" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 </div> 
              </section>
